--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -1,1 +1,49 @@
-train_models: true 
+# absolute path to lp yaml file
+lightning_pose_config: /teamspace/studios/this_studio/lp3d-analysis/configs/config_mirror-mouse.yaml
+# lightning_pose_config: /teamspace/studios/this_studio/lp3d-analysis/configs/config_crim13.yaml
+
+# [needed?] pipeline seed for initial data split
+pipeline_seeds: 0
+
+# initial training of an ensemble of networks
+train_networks:
+  # run this section?
+  run: True
+  # overwrite previous results?
+  overwrite: False 
+  # pose estimation data type
+  # data_type: lp
+  # ensemble seeds
+  ensemble_seeds:
+    - 0
+    - 1
+    - 2
+    - 3
+    - 4
+  # number of ground truth labels for training
+  n_hand_labels: 100
+  # model type
+  model_types:
+    - supervised
+    - context
+  # training parameters
+  min_steps: 5000
+  max_steps: 5000
+  milestone_steps: [2000, 3000, 4000]
+  val_check_interval: 50
+  train_check_interval: 10
+
+# post-processing options
+post_processing:
+  eks_singleview:
+    run: False
+    overwrite: False
+  eks_multiview:
+    run: False
+    overwrite: False
+
+# visualization options
+visualization:
+  run: False
+  overwrite: False
+  ens_var_plots: False
