get initial pipeline working

--- a/configs/config_mirror-mouse-separate.yaml
+++ b/configs/config_mirror-mouse-separate.yaml
@@ -1,43 +1,32 @@
 data:
-  # dimensions of training images
-  image_orig_dims:
-    height: 406
-    width: 396
   # resize dimensions to streamline model creation
   image_resize_dims:
-    height: 256
+    height: 128
     width: 256
   # ABSOLUTE path to data directory
-  data_dir: /teamspace/studios/this_studio/data/mirror-mouse
-  # ABSOLUTE path to unlabeled videos' directory. the below is just a toy example for running Getting Started scripts
-  video_dir: videos_test
-  
+  data_dir: /teamspace/studios/data/mirror-mouse-separate
+  # ABSOLUTE path to unlabeled videos' directory
+  video_dir: /teamspace/studios/data/mirror-mouse-separate/videos
   # location of labels; for example script, this should be relative to `data_dir`
-  csv_file: CollectedData.csv
+  csv_file:
+    - CollectedData_top.csv
+    - CollectedData_bot.csv
+  view_names:
+    - top
+    - bot
   # downsample heatmaps - 2 | 3
   downsample_factor: 2
   # total number of keypoints
-  num_keypoints: 14
+  num_keypoints: 7
   # keypoint names
   keypoint_names:
-    - paw1LH_top
-    - paw2LF_top
-    - paw3RF_top
-    - paw4RH_top
-    - tailBase_top
-    - tailMid_top
-    - nose_top
-    # - obs_top
-    - paw1LH_bot
-    - paw2LF_bot
-    - paw3RF_bot
-    - paw4RH_bot
-    - tailBase_bot
-    - tailMid_bot
-    - nose_bot
-    # - obsHigh_bot
-    # - obsLow_bot
-
+    - paw1LH
+    - paw2LF
+    - paw3RF
+    - paw4RH
+    - tailBase
+    - tailMid
+    - nose
   # for mirrored setups with all keypoints defined in same csv file, define matching
   # columns for different keypoints (assumes x-y-x-y interleaving)
   # each list corresponds to a single view, so in the example below there are 2 views
@@ -45,17 +34,8 @@ data:
   # columns that correspond to keypoints only labeled in a single view are omitted
   # TODO: what if a keypoint is labeled in more than 1 but not all views?
   # this info is only used for the multiview pca loss
-  
-  # mirrored_column_matches:
-  #   - [0, 1, 2, 3, 4, 5, 6]
-  #   - [8, 9, 10, 11, 12, 13, 14]
-  # columns_for_singleview_pca: [0, 1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 12, 13, 14]
-
-  mirrored_column_matches:
-    - [0, 1, 2, 3, 4, 5, 6]
-    - [7, 8, 9, 10, 11, 12, 13]
-  
-  columns_for_singleview_pca: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
+  mirrored_column_matches: [0, 1, 2, 3, 4, 5, 6]
+  columns_for_singleview_pca: [0, 1, 2, 3, 4, 5, 6]
 
 training:
   # select from one of several predefined image/video augmentation pipelines
@@ -64,18 +44,18 @@ training:
   # dlc-top-down- dlc augmentations plus vertical and horizontal flips
   imgaug: dlc
   # batch size of labeled data during training
-  train_batch_size: 10 #Tommy: original val 8
+  train_batch_size: 8
   # batch size of labeled data during validation
   val_batch_size: 48
   # batch size of labeled data during test
   test_batch_size: 48
   # fraction of labeled data used for training
-  train_prob: 0.8
+  train_prob: 0.95
   # fraction of labeled data used for validation (remaining used for test)
-  val_prob: 0.1
+  val_prob: 0.05
   # <=1 - fraction of total train frames (determined by `train_prob`) used for training
   # >1 - number of total train frames used for training
-  train_frames: 100
+  train_frames: 1
   # number of gpus to train a single model
   num_gpus: 1
   # number of cpu workers for data loaders
@@ -83,16 +63,14 @@ training:
   # epochs over which to assess validation metrics for early stopping
   early_stop_patience: 3
   # epoch at which backbone network weights begin updating
-  unfreezing_epoch: 0 #20
+  unfreezing_epoch: 20
   # max training epochs; training may exit before due to early stopping
-  min_epochs: 100
-  max_epochs: 100
+  min_epochs: 300
+  max_epochs: 300
   # frequency to log training metrics (one step is one batch)
   log_every_n_steps: 10
   # frequency to log validation metrics
   check_val_every_n_epoch: 5
-  # select gpu for training
-  gpu_id: 0
   # rng seed for labeled batches
   rng_seed_data_pt: 0
   # rng seed for weight initialization
@@ -104,6 +82,7 @@ training:
     multisteplr:
       milestones: [150, 200, 250]
       gamma: 0.5
+  uniform_heatmaps_for_nan_keypoints: true
 
 model:
   # list of unsupervised losses
@@ -115,28 +94,26 @@ model:
   # resnet50_human_jhmdb | resnet50_human_res_rle | resnet50_human_top_res
   # efficientnet_b0 | efficientnet_b1 | efficientnet_b2
   backbone: resnet50_animal_ap10k
-  # prediction mode: regression | heatmap | heatmap_mhcrnn (context)
+  # prediction mode - "heatmap" | "regression" | "heatmap_mhcrnn"
   model_type: heatmap
   # which heatmap loss to use
   # "mse" | "kl" | "js"
   heatmap_loss_type: mse
   # tt expt name
-  model_name: test
+  model_name: test_model
 
 dali:
   general:
     seed: 123456
   base:
     train:
-      sequence_length: 32 # 4 # step = sequence_length by default. done internally
+      sequence_length: 32
     predict:
-      # (train_batch_size + base.train.sequence_length) * 2 -> round down to nearest pow of 2
-      sequence_length: 128 # step = sequence_length by default. done internally.
+      sequence_length: 128
   context:
-    train: # defaults: sequence_length=5, step=sequence_length
+    train:
       batch_size: 16
-    predict: # defaults: sequence_length=5, step=1
-      # (train_batch_size / 4 + context.train.batch_size) * 2 -> round down to nearest pow of 2
+    predict:
       sequence_length: 96
 
 losses:
@@ -144,19 +121,19 @@ losses:
   pca_multiview:
     # weight in front of PCA loss
     log_weight: 5.0
-    # predictions should lie within the low-d subspace spanned by these components
+    # predictions whould lie within the low-d subspace spanned by these components
     components_to_keep: 3
-    # absolute error (in pixels) below which pca loss is zeroed out; if null, an empirical
-    # epsilon is computed using the labeled data
+    # absolute error (in pixels) below which pca loss is zeroed out; if not null, this
+    # parameter takes precedence over `empirical_epsilon_percentile`
     epsilon: null
   # loss = projection onto the discarded eigenvectors
   pca_singleview:
     # weight in front of PCA loss
     log_weight: 5.0
-    # predictions should lie within the low-d subspace spanned by components that describe this fraction of variance
+    # predictions whould lie within the low-d subspace spanned by components that describe this fraction of variance
     components_to_keep: 0.99
-    # absolute error (in pixels) below which pca loss is zeroed out; if null, an empirical
-    # epsilon is computed using the labeled data
+    # absolute error (in pixels) below which pca loss is zeroed out; if not null, this
+    # parameter takes precedence over `empirical_epsilon_percentile`
     epsilon: null
   # loss = norm of distance between successive timepoints
   temporal:
@@ -170,34 +147,33 @@ losses:
     prob_threshold: 0.05
 
 eval:
-  # paths to the hydra config files in the output folder, OR absolute paths to such folders.
-  hydra_paths: [" "]
-  # predict?
-  predict_vids_after_training: true
-  # save .mp4?
+  # predict? used in scripts/train_hydra.py
+  predict_vids_after_training: false
+  # str with an absolute path to a directory containing videos for prediction.
+  test_videos_directory: ${data.video_dir}
+  # save labeled .mp4? used in scripts/train_hydra.py and scripts/predict_new_vids.py
   save_vids_after_training: false
+  # matplotlib sequential or diverging colormap name for prediction visualization
+  # sequential options: viridis, plasma, magma, inferno, cool, etc.
+  # diverging options: RdBu, coolwarm, Spectral, etc.
+  colormap: "cool"
+  # confidence threshold for plotting a vid
+  confidence_thresh_for_vid: 0.90
+
+  # paths to the hydra config files in the output folder, OR absolute paths to such folders.
+  # used in scripts/predict_new_vids.py and scripts/create_fiftyone_dataset.py
+  hydra_paths: [" "]
+
   fiftyone:
-    # will be the name of the dataset (Mongo DB) created by FiftyOne. for video dataset, we will append dataset_name + "_video"
-    dataset_name: mirror-mouse
+    # will be the name of the dataset (Mongo DB) created by FiftyOne
+    dataset_name: test
     # if you want to manually provide a different model name to be displayed in FiftyOne
     model_display_names: ["test_model"]
     # whether to launch the app from the script (True), or from ipython (and have finer control over the outputs)
     launch_app_from_script: false
-
     remote: true # for LAI, must be False
     address: 127.0.0.1 # ip to launch the app on.
     port: 5151 # port to launch the app on.
-
-  # str with an absolute path to a directory containing videos for prediction.
-  test_videos_directory: null
-  # str with an absolute path to directory in which you want to save .csv with predictions
-  saved_vid_preds_dir: null
-  # confidence threshold for plotting a vid
-  confidence_thresh_for_vid: 0.90
-  # str with absolute path to the video file you want plotted with keypoints
-  video_file_to_plot: null
-  # a list of strings, each points to a .csv file with predictions of a given model to the same video. will be combined with video_file_to_plot to make a visualization
-  pred_csv_files_to_plot: [" "]
 
 callbacks:
   anneal_weight:
