--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -1,3 +1,8 @@
+#TODO 
+# ask Matt about adding the views variable to the config file so we can pick the views that we have and in that way instead of iterating over files we will iterate over views - which will determine things
+
+
+
 # absolute path to lp yaml file
 lightning_pose_config: /teamspace/studios/this_studio/lp3d-analysis/configs/config_mirror-mouse-separate.yaml
 # lightning_pose_config: /teamspace/studios/this_studio/lp3d-analysis/configs/config_crim13.yaml
@@ -5,7 +10,7 @@ lightning_pose_config: /teamspace/studios/this_studio/lp3d-analysis/configs/conf
 # [needed?] pipeline seed for initial data split
 pipeline_seeds: 0
 
-intermediate_results_dir: testing
+intermediate_results_dir: results_500
 
 # initial training of an ensemble of networks
 train_networks:
@@ -18,8 +23,8 @@ train_networks:
   # ensemble seeds
   ensemble_seeds:
     - 0
-    # - 1
-    # - 2
+    - 1
+    - 2
     # - 3
     # - 4
   # number of ground truth labels for training
@@ -40,8 +45,8 @@ train_networks:
   # milestone_steps: [2000, 3000, 4000]
   # val_check_interval: 50
   # train_check_interval: 10
-  min_steps: 50
-  max_steps: 50
+  min_steps: 500
+  max_steps: 500
   milestone_steps: [2000, 3000, 4000]
   val_check_interval: 5
   train_check_interval: 5
@@ -54,6 +59,13 @@ post_processing:
   eks_multiview:
     run: False
     overwrite: False
+  ensemble_mean:
+    run: True
+    overwrite: False
+  ensemble_median:
+    run: True
+    overwrite: False
+    
 
 # visualization options
 visualization:
