--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -1,13 +1,14 @@
 #TODO 
 # ask Matt about adding the views variable to the config file so we can pick the views that we have and in that way instead of iterating over files we will iterate over views - which will determine things
 
+dataset_name: fly-anipose
 
-# absolute path to lp yaml file
-lightning_pose_config: /teamspace/studios/this_studio/lp3d-analysis/configs/config_mirror-mouse-separate.yaml
-# lightning_pose_config: /teamspace/studios/this_studio/lp3d-analysis/configs/config_crim13.yaml
+lightning_pose_config: /teamspace/studios/this_studio/lp3d-analysis/configs/config_${dataset_name}.yaml
 
 # [needed?] pipeline seed for initial data split
 pipeline_seeds: 0
+
+outputs_dir: /teamspace/studios/this_studio/outputs/${dataset_name}
 
 intermediate_results_dir: results_100_5k
 
@@ -32,12 +33,13 @@ train_networks:
   # model type
   model_types:
     - supervised
-    #- context
+   # - context
   # run inference on videos in these directories (independent of training videos)
   inference_dirs:
     # - videos_new
     - videos-for-each-labeled-frame
     - videos_debug
+
   # training parameters
   # min_steps: 5000
   # max_steps: 5000
@@ -52,10 +54,11 @@ train_networks:
 
 # post-processing options
 post_processing:
-  eks_multiview:
+
+  eks_singleview:
     run: True
     overwrite: True
-  eks_singleview:
+  eks_multiview:
     run: True
     overwrite: True
   ensemble_mean:
