--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -1,7 +1,7 @@
 #TODO 
 # ask Matt about adding the views variable to the config file so we can pick the views that we have and in that way instead of iterating over files we will iterate over views - which will determine things
 
-dataset_name: mirror-mouse-separate
+dataset_name: fly-anipose
 
 lightning_pose_config: /teamspace/studios/this_studio/lp3d-analysis/configs/config_${dataset_name}.yaml
 
@@ -37,8 +37,8 @@ train_networks:
   # run inference on videos in these directories (independent of training videos)
   inference_dirs:
     # - videos_new
-    - videos-for-each-labeled-frame
-    # - videos_debug
+    # - videos-for-each-labeled-frame
+    - videos_debug
 
   # training parameters
   # min_steps: 5000
@@ -53,7 +53,22 @@ train_networks:
   train_check_interval: 5
 
 # post-processing options
-post_processing:
+post_processing_labels:
+
+  eks_singleview:
+    run: False
+    overwrite: False
+  eks_multiview:
+    run: False
+    overwrite: False
+  ensemble_mean:
+    run: False
+    overwrite: False
+  ensemble_median:
+    run: False
+    overwrite: False
+
+post_processing_videos:
 
   eks_singleview:
     run: False
@@ -67,7 +82,8 @@ post_processing:
   ensemble_median:
     run: False
     overwrite: False
-    
+
+
 
 # visualization options
 visualization:
