--- a/configs/config_fly-anipose.yaml
+++ b/configs/config_fly-anipose.yaml
@@ -65,7 +65,7 @@ data:
   # columns that correspond to keypoints only labeled in a single view are omitted
   # TODO: what if a keypoint is labeled in more than 1 but not all views?
   # this info is only used for the multiview pca loss
-  mirrored_column_matches: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29]
+  mirrored_column_matches: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29] # saying use all keypoints 
   columns_for_singleview_pca: []
 
   skeleton:
@@ -104,7 +104,7 @@ training:
   # dlc-top-down- dlc augmentations plus vertical and horizontal flips
   imgaug: dlc
   # batch size of labeled data during training
-  train_batch_size: 4
+  train_batch_size: 8 # for the supervised one it is 8 for the ctx 4 
   # batch size of labeled data during validation
   val_batch_size: 16
   # batch size of labeled data during test
@@ -162,30 +162,31 @@ model:
   # tt expt name
   model_name: test_model
 
+# batch sizes for unlabeled data (for unsupervised data during training and prediction on videos)
 dali:
   general:
     seed: 123456
   base:
-    train:
-      sequence_length: 32
+    train: 
+      sequence_length: 8 # number of consecutive frames 
     predict:
-      sequence_length: 128
+      sequence_length: 128 # for videos - number of consecutive frames for inference each video alone 
   context:
     train:
       batch_size: 16
     predict:
       sequence_length: 96
-
+  
 losses:
   # loss = projection onto the discarded eigenvectors
   pca_multiview:
     # weight in front of PCA loss
-    log_weight: 5.0
+    log_weight: 6.0 # the weight we want for the pca loss. the smaller it is the higher the weight 
     # predictions whould lie within the low-d subspace spanned by these components
     components_to_keep: 3
     # absolute error (in pixels) below which pca loss is zeroed out; if not null, this
     # parameter takes precedence over `empirical_epsilon_percentile`
-    epsilon: null
+    epsilon: null 
   # loss = projection onto the discarded eigenvectors
   pca_singleview:
     # weight in front of PCA loss
