--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -18,6 +18,7 @@ train_networks:
   run: True
   # overwrite previous results?
   overwrite: False
+  
   # pose estimation data type
   # data_type: lp
   # ensemble seeds
@@ -32,13 +33,15 @@ train_networks:
     - 100
   # model type
   model_types:
-    # - supervised
-    - context
+    - supervised
+    # - context
+    # - semisupervised
   # run inference on videos in these directories (independent of training videos)
   inference_dirs:
     # - videos_new
-    # - videos-for-each-labeled-frame
-    - videos_debug
+    - videos-for-each-labeled-frame
+    # - videos_debug
+    # - videos_ind
 
   # training parameters
   # min_steps: 5000
@@ -58,31 +61,31 @@ post_processing_labels:
 
   eks_singleview:
     run: False
-    overwrite: False
+    overwrite: False 
   eks_multiview:
-    run: False
-    overwrite: False
+    run: True
+    overwrite: True
   ensemble_mean:
     run: False
     overwrite: False
   ensemble_median:
     run: False
-    overwrite: False
+    overwrite: False 
 
 post_processing_videos:
 
   eks_singleview:
-    run: True
-    overwrite: True
+    run: False
+    overwrite: False
   eks_multiview:
-    run: True
-    overwrite: True
+    run: False
+    overwrite: False
   ensemble_mean:
-    run: True
-    overwrite: True
+    run: False
+    overwrite: False
   ensemble_median:
-    run: True
-    overwrite: True
+    run: False
+    overwrite: False
 
 
 
