Fixing problem of bounding box logic in post_process. keeping an old version of post_process_concat, while the new one is post_process_concat_bbox.

--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -44,6 +44,7 @@ train_networks:
     - videos-for-each-labeled-frame
     # - videos_debug
     # - videos_ind
+    # - videos_paper 
 
 
   # training parameters
@@ -105,4 +106,4 @@ visualization:
     overwrite: False
 
   
-# remember that we will have to run it over view 
+
