--- a/configs/config_chickadee-crop.yaml
+++ b/configs/config_chickadee-crop.yaml
@@ -6,7 +6,7 @@ data:
   # ABSOLUTE path to data directory
   data_dir: /teamspace/studios/data/chickadee-crop
   # ABSOLUTE path to unlabeled videos' directory
-  video_dir: /teamspace/studios/data/chickadee-crop
+  video_dir: /teamspace/studios/data/chickadee-crop/videos
   # location of labels; for example script, this should be relative to `data_dir`
   csv_file:
     - CollectedData_lBack.csv
@@ -55,6 +55,44 @@ data:
   # this info is only used for the multiview pca loss
   mirrored_column_matches: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
   columns_for_singleview_pca: []
+
+  skeleton:
+    - ['topBeak', 'topHead']
+    - ['leftEye', 'topHead']
+    - ['rightEye', 'topHead']
+    - ['topHead', 'backHead']
+    - ['centerBack', 'backHead']
+    - ['centerBack', 'centerChes']
+    - ['centerBack', 'leftNeck']
+    - ['leftNeck', 'leftWing']
+    - ['centerBack', 'rightNeck']
+    - ['rightNeck', 'rightWing']
+    - ['baseTail', 'centerBack']
+    - ['baseTail', 'tipTail']
+    - ['baseTail', 'leftAnkle']
+    - ['leftAnkle', 'leftFoot']
+    - ['baseTail', 'rightAnkle']
+    - ['rightAnkle', 'rightFoot']
+
+  skeleton_colors:
+    topBeak-topHead: yellow
+    leftEye-topHead: darkred
+    rightEye-topHead: darkblue
+    topHead-backHead: yellow
+    centerBack-backHead: yellow
+    centerBack-centerChes: yellow
+    centerBack-leftNeck: darkgreen
+    leftNeck-leftWing: darkgreen
+    centerBack-rightNeck: limegreen
+    rightNeck-rightWing: limegreen
+    baseTail-centerBack: yellow
+    baseTail-tipTail: yellow
+    baseTail-leftAnkle: darkred
+    leftAnkle-leftFoot: darkred
+    baseTail-rightAnkle: red
+    rightAnkle-rightFoot: red
+
+
 
 training:
   # select from one of several predefined image/video augmentation pipelines
