--- a/configs/pipeline_inference.yaml
+++ b/configs/pipeline_inference.yaml
@@ -2,8 +2,8 @@
 # ask Matt about adding the views variable to the config file so we can pick the views that we have and in that way instead of iterating over files we will iterate over views - which will determine things
 
 # dataset_name: chickadee-crop
-dataset_name: fly-anipose
-# dataset_name: mirror-mouse-separate
+# dataset_name: fly-anipose
+dataset_name: mirror-mouse-separate
 
 lightning_pose_config: /teamspace/studios/this_studio/lp3d-analysis/configs/config_${dataset_name}.yaml
 
@@ -83,27 +83,27 @@ post_processing_labeled_frames:
   run : True
   overwrite: False
   modes:
-    # - eks_singleview
+    - eks_singleview
     - eks_multiview
-    # - ensemble_mean
-    # - ensemble_median
+    - ensemble_mean
+    - ensemble_median
 
 
 post_processing_videos:
 
   eks_singleview:
-    run: False
-    overwrite: False
+    run: True
+    overwrite: True
   eks_multiview:
     run: True
     overwrite: True
     n_latent: 3 # components for pca object
   ensemble_mean:
-    run: False
-    overwrite: False
+    run: True
+    overwrite: True
   ensemble_median:
-    run: False
-    overwrite: False
+    run: True
+    overwrite: True
 
 
 
