--- a/configs/config_chickadee-crop.yaml
+++ b/configs/config_chickadee-crop.yaml
@@ -7,6 +7,8 @@ data:
   data_dir: /teamspace/studios/data/chickadee-crop
   # ABSOLUTE path to unlabeled videos' directory
   video_dir: /teamspace/studios/data/chickadee-crop/videos
+  # camera calibration files location
+  camera_params_file: /teamspace/studios/data/chickadee-crop/calibrations.csv
   # location of labels; for example script, this should be relative to `data_dir`
   csv_file:
     - CollectedData_lBack.csv
@@ -99,7 +101,8 @@ training:
   # default- resizing only
   # dlc- imgaug pipeline implemented in DLC 2.0 package
   # dlc-top-down- dlc augmentations plus vertical and horizontal flips
-  imgaug: dlc-lr
+  imgaug: dlc
+  # imgaug: dlc-mv # I replaced for multiview augmentations 
   # batch size of labeled data during training
   train_batch_size: 8
   # batch size of labeled data during validation
@@ -132,12 +135,17 @@ training:
   rng_seed_data_pt: 0
   # rng seed for weight initialization
   rng_seed_model_pt: 0
+  # optimizer: Adam | AdamW.ada
+  # Recommended to use Adam for resnet backbones, and AdamW for ViT backbones.
+  optimizer: Adam
+  optimizer_params:
+    learning_rate: 0.001 #(1e-3)
   # learning rate scheduler
   # multisteplr | [todo - reducelronplateau]
   lr_scheduler: multisteplr
   lr_scheduler_params:
     multisteplr:
-      milestones: [150, 200, 250]
+      milestones: [2000, 3000, 4000]
       gamma: 0.5
   uniform_heatmaps_for_nan_keypoints: true
 
@@ -151,8 +159,10 @@ model:
   # resnet50_human_jhmdb | resnet50_human_res_rle | resnet50_human_top_res
   # efficientnet_b0 | efficientnet_b1 | efficientnet_b2
   backbone: resnet50_animal_ap10k
-  # prediction mode - "heatmap" | "regression" | "heatmap_mhcrnn"
-  model_type: heatmap
+  # prediction mode - "heatmap" | "regression" | "heatmap_mhcrnn" | "heatmap_multiview" 
+  model_type: heatmap # ( supposed to be heatmap for supervised)
+  # head mode - "heatmap_cnn" | "feature_transformer" | "feature_transformer_learnable" | "feature_transformer_learnable_crossview"
+  # head: feature_transformer_learnable_crossview
   # which heatmap loss to use
   # "mse" | "kl" | "js"
   heatmap_loss_type: mse
