--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -1,9 +1,9 @@
 #TODO 
 # ask Matt about adding the views variable to the config file so we can pick the views that we have and in that way instead of iterating over files we will iterate over views - which will determine things
 
-# dataset_name: mirror-mouse-separate
-dataset_name: fly-anipose
 # dataset_name: chickadee-crop
+dataset_name: fly-anipose
+# dataset_name: mirror-mouse-separate
 
 lightning_pose_config: /teamspace/studios/this_studio/lp3d-analysis/configs/config_${dataset_name}.yaml
 
@@ -12,7 +12,7 @@ pipeline_seeds: 0
 
 outputs_dir: /teamspace/studios/this_studio/outputs/${dataset_name}
 
-intermediate_results_dir: results_100_5k
+intermediate_results_dir: results_300_20k
 
 # initial training of an ensemble of networks
 train_networks:
@@ -28,11 +28,15 @@ train_networks:
     - 0
     - 1
     - 2
-    - 3
-    - 4
+    # - 3
+    # - 4
+    # - 5
+    # - 6
+    
   # number of ground truth labels for training
   n_hand_labels: 
-    - 100
+    # - 100
+    - 300
   # model type
   model_types:
     - supervised
@@ -40,12 +44,11 @@ train_networks:
     # - semisupervised
   # run inference on videos in these directories (independent of training videos)
   inference_dirs:
-    # - videos_new
-    - videos-for-each-labeled-frame
+    - videos_new
+    # - videos-for-each-labeled-frame
     # - videos_debug
     # - videos_ind
-    # - videos_paper 
-
+    # - videos_paper
 
   # training parameters
   # min_steps: 5000
@@ -53,43 +56,56 @@ train_networks:
   # milestone_steps: [2000, 3000, 4000]
   # val_check_interval: 50
   # train_check_interval: 10
-  min_steps: 5000 # need 5000 I use 500 for testing 
-  max_steps: 5000 # need 5000
-  unfreezing_step: 260
-  milestone_steps: [2000, 3000, 4000]
+  min_steps: 20000 # need 5000 I use 500 for testing 
+  max_steps: 20000 # need 5000
+  unfreezing_step: 1000 # was 260
+  milestone_steps: [8000, 12000, 16000]
   val_check_interval: 5
   train_check_interval: 5
 
 # post-processing options
-post_processing_labels:
+# post_processing_labels:
 
-  eks_singleview:
-    run: False
-    overwrite: False
-  eks_multiview:
-    run: True
-    overwrite: True
-  ensemble_mean:
-    run: False
-    overwrite: False
-  ensemble_median:
-    run: False
-    overwrite: False 
+#   eks_singleview:
+#     run: False
+#     overwrite: False
+#   eks_multiview:
+#     run: False
+#     use_pca: False
+#     n_components: 3 # components for pca object  
+#     overwrite: False
+#   ensemble_mean:
+#     run: False
+#     overwrite: False
+#   ensemble_median:
+#     run: False
+#     overwrite: False 
+
+post_processing_labeled_frames:
+  run : True
+  overwrite: False
+  modes:
+    - eks_singleview
+    - eks_multiview
+    - ensemble_mean
+    - ensemble_median
+
 
 post_processing_videos:
 
   eks_singleview:
-    run: False
-    overwrite: False
+    run: True
+    overwrite: True
   eks_multiview:
-    run: False
-    overwrite: False
+    run: True
+    overwrite: True
+    n_latent: 3 # components for pca object
   ensemble_mean:
-    run: False
-    overwrite: False
+    run: True
+    overwrite: True
   ensemble_median:
-    run: False
-    overwrite: False
+    run: True
+    overwrite: True
 
 
 
